페이지 기본 항목 일괄추가 - 스크립트 에러수정 - 헤더영역 추가 - 사이드 메뉴 항목 추가 및 활성화 조건수정

--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
               <span class="doc-nav__text">직원별 통계</span>
             </a>
           </div>
+          <div class="doc-nav__2depth">
+            <a class="doc-nav__link" href="/pages/05.statistics/06.product.html">
+              <span class="doc-nav__text">상품별 통계</span>
+            </a>
+          </div>
         </div>
 
 
@@ -646,7 +651,7 @@ $(".datepicker").flatpickr(defaultOption);</code>
             <button type="button" class="button button--flat-warning">flat-warning</button>
             <button type="button" class="button button--flat-danger">flat-danger</button>
             <h2>button outline</h2>
-            <button type="button" class="button button--outline-prmary">outline-prmary</button>
+            <button type="button" class="button button--outline-primary">outline-primary</button>
             <button type="button" class="button button--outline-secondary">outline-secondary</button>
             <button type="button" class="button button--outline-success">outline-success</button>
             <button type="button" class="button button--outline-warning">outline-warning</button>
