--- a/pages/01.manage/01.user_04.html
+++ b/pages/01.manage/01.user_04.html
@@ -153,6 +153,16 @@
               <span class="doc-nav__text">직원별 통계</span>
             </a>
           </div>
+          <div class="doc-nav__2depth">
+            <a class="doc-nav__link" href="/pages/05.statistics/06.product.html">
+              <span class="doc-nav__text">상품별 통계</span>
+            </a>
+          </div>
+          <div class="doc-nav__2depth">
+            <a class="doc-nav__link" href="/pages/05.statistics/06.product.html">
+              <span class="doc-nav__text">상품별 통계</span>
+            </a>
+          </div>
         </div>
 
 
