--- a/pages/02.kong/02.kongcount.html
+++ b/pages/02.kong/02.kongcount.html
@@ -153,6 +153,11 @@
               <span class="doc-nav__text">직원별 통계</span>
             </a>
           </div>
+          <div class="doc-nav__2depth">
+            <a class="doc-nav__link" href="/pages/05.statistics/06.product.html">
+              <span class="doc-nav__text">상품별 통계</span>
+            </a>
+          </div>
         </div>
 
 
@@ -174,7 +179,6 @@
 
         <section class="page-section">
           <h3 class="page-section__title">콩 종류 선택</h3>
-
           <span class="form-select">
             <select>
               <option value="" selected>선택</option>
@@ -224,9 +228,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>
-                    <input id="checkbox01" type="checkbox" name="checkboxname01">
-                  </td>
+                  <td><input id="checkbox01" type="checkbox" name="checkboxname01"></td>
                   <td>홍길동</td>
                   <td>9928</td>
                   <td>12</td>
@@ -343,7 +345,7 @@
       </footer>
     </article>
   </div>
-  <!-- // 콩 일괄 적용 -->
+  <!-- // 수여자 일괄 적용 -->
 
 
   <!-- 편지 일괄 적용 -->
