--- a/pages/05.statistics/06.product.html
+++ b/pages/05.statistics/06.product.html
@@ -148,12 +148,12 @@
               <span class="doc-nav__text">부점/직급별 통계</span>
             </a>
           </div>
-          <div class="doc-nav__2depth doc-nav__2depth--is-active">
+          <div class="doc-nav__2depth">
             <a class="doc-nav__link" href="/pages/05.statistics/05.employee.html">
               <span class="doc-nav__text">직원별 통계</span>
             </a>
           </div>
-          <div class="doc-nav__2depth">
+          <div class="doc-nav__2depth doc-nav__2depth--is-active">
             <a class="doc-nav__link" href="/pages/05.statistics/06.product.html">
               <span class="doc-nav__text">상품별 통계</span>
             </a>
@@ -173,9 +173,9 @@
           <a href="" class="breadcrumb__link">통계 관리</a>
 
           <span class="breadcrumb__arrow"><i class="fas fa-chevron-right"></i></span>
-          <a href="" class="breadcrumb__link">직원별 통계</a>
+          <a href="" class="breadcrumb__link">상품별 통계</a>
         </nav>
-        <h2 class="page-title">직원별 통계</h2>
+        <h2 class="page-title">상품별 통계</h2>
 
         <section class="page-section">
           <h3 class="page-section__title">조회조건</h3>
