--- a/pages/03.product/02.history.html
+++ b/pages/03.product/02.history.html
@@ -19,7 +19,18 @@
 <body>
   <div class="doc-wrap">
     <header class="doc-header">
-      <h1>HEADER</h1>
+      <div class="doc-header__inner">
+        <h1 class="doc-header__logo"><a class="doc-header__logo-link" href="#">알콩달콩</a></h1>
+        <div class="doc-header__title">경남은행 콩시스템 관리자</div>
+        <aside class="doc-header__aside">
+          <div class="doc-header__user">
+            <strong class="doc-header__user-name">홍길동(활빈당지부)</strong>
+          </div>
+          <div class="doc-header__logout">
+            <a href="#"><i class="fas fa-sign-out-alt"></i>로그아웃</a>
+          </div>
+        </aside>
+      </div>
     </header>
     <nav class="doc-nav">
       <div class="doc-nav__inner">
@@ -68,12 +79,12 @@
             <span class="doc-nav__text">상품설정 관리</span>
             <span class="doc-nav__icon"><i class="fas fa-chevron-down" style="width:12px"></i></span>
           </button>
-          <div class="doc-nav__2depth  doc-nav__2depth--is-active">
+          <div class="doc-nav__2depth">
             <a class="doc-nav__link" href="/pages/03.product/01.add.html">
               <span class="doc-nav__text">상품 등록관리</span>
             </a>
           </div>
-          <div class="doc-nav__2depth">
+          <div class="doc-nav__2depth  doc-nav__2depth--is-active">
             <a class="doc-nav__link" href="/pages/03.product/02.history.html">
               <span class="doc-nav__text">상품지급내역관리</span>
             </a>
@@ -137,6 +148,11 @@
               <span class="doc-nav__text">직원별 통계</span>
             </a>
           </div>
+          <div class="doc-nav__2depth">
+            <a class="doc-nav__link" href="/pages/05.statistics/06.product.html">
+              <span class="doc-nav__text">상품별 통계</span>
+            </a>
+          </div>
         </div>
 
 
@@ -144,7 +160,22 @@
       </div>
     </nav>
     <main class="doc-main">
-      <div class="doc-contents">123123</div>
+      <div class="doc-contents">
+        <nav class="breadcrumb">
+          <a class="breadcrumb__home" href="#"><i style="width:18px" class="fas fa-home"></i></a>
+
+          <span class="breadcrumb__arrow"><i class="fas fa-chevron-right"></i></span>
+          <a href="" class="breadcrumb__link">상품설정 관리</a>
+
+          <span class="breadcrumb__arrow"><i class="fas fa-chevron-right"></i></span>
+          <a href="" class="breadcrumb__link">상품지급내역 관리</a>
+        </nav>
+        <h2 class="page-title">상품지급내역 관리</h2>
+
+        <section class="page-section">
+          <h3 class="page-section__title">조회조건</h3>
+        </section>
+      </div>
     </main>
 
 
