--- a/pages/03.product/01.add.html
+++ b/pages/03.product/01.add.html
@@ -234,7 +234,7 @@
                   <td><input id="checkbox01" type="checkbox" name="checkboxname01"></td>
                   <td>0001</td>
                   <td>스타벅스 텀블러</td>
-                  <td><button type="button" class="button button--outline-secondary">보기</button></td>
+                  <td><button type="button" class="button button--sm button--outline-secondary">보기</button></td>
                   <td>2021-03-02</td>
                   <td>2023-03-01</td>
                   <td>Y</td>
@@ -249,14 +249,38 @@
                 </tr>
               </tbody>
             </table>
-            <div class="button-group">
-              <div class="button-group--position-left">
-                <button type="button" class="button button--flat-secondary">엑셀저장</button>
-              </div>
-              <div class="button-group--position-right">
-                <button class="button button--flat-primary" type="button" data-layer="#popupProductModify">수정하기</button>
-                <button class="button button--flat-primary" type="button" data-layer="#popupProductAdd">신규등록</button>
-              </div>
+          </div>
+            
+          <div id="pagenation" class="guide-box">
+            <div class="pagenation">
+              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-double-left"></i></a>
+              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-left"></i></a>
+  
+  
+              <a class="pagenation-item pagenation-item--is-active" href="#">1</a>
+              <a class="pagenation-item" href="#">2</a>
+              <a class="pagenation-item" href="#">3</a>
+              <a class="pagenation-item" href="#">4</a>
+              <a class="pagenation-item" href="#">5</a>
+              <a class="pagenation-item" href="#">6</a>
+              <a class="pagenation-item" href="#">7</a>
+              <a class="pagenation-item" href="#">8</a>
+              <a class="pagenation-item" href="#">9</a>
+              <a class="pagenation-item" href="#">10</a>
+  
+  
+              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-right"></i></a>
+              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-double-right"></i></a>
+            </div>
+          </div>
+
+          <div class="button-group">
+            <div class="button-group--position-left">
+              <button type="button" class="button button--flat-secondary">엑셀저장</button>
+            </div>
+            <div class="button-group--position-right">
+              <button class="button button--flat-primary" type="button" data-layer="#popupProductModify">수정하기</button>
+              <button class="button button--flat-primary" type="button" data-layer="#popupProductAdd">신규등록</button>
             </div>
           </div>
         </section>
