사용자정보 관리 완료

--- a/index.html
+++ b/index.html
@@ -155,11 +155,6 @@
               <span class="doc-nav__text">직원별 통계</span>
             </a>
           </div>
-          <div class="doc-nav__2depth">
-            <a class="doc-nav__link" href="/pages/05.statistics/06.product.html">
-              <span class="doc-nav__text">상품별 통계</span>
-            </a>
-          </div>
         </div>
 
 
@@ -416,6 +411,7 @@
                   </tr>
                 </tbody>
               </table>
+            </div>
           </div>
         </div>
 
@@ -645,7 +641,7 @@ $(".datepicker").flatpickr(defaultOption);</code>
             <button class="button" type="button">default</button>
             <button class="button button--type-link" type="button">type link</button>
             <h2>button flat</h2>
-            <button type="button" class="button button--flat-primary">flat-prmary</button>
+            <button type="button" class="button button--flat-primary">flat-primary</button>
             <button type="button" class="button button--flat-secondary">flat-secondary</button>
             <button type="button" class="button button--flat-success">flat-success</button>
             <button type="button" class="button button--flat-warning">flat-warning</button>
