관리자 정보관리 완료

--- a/pages/01.manage/02.manage.html
+++ b/pages/01.manage/02.manage.html
@@ -165,7 +165,117 @@
       </div>
     </nav>
     <main class="doc-main">
-      <div class="doc-contents">123123</div>
+      <div class="doc-contents">
+        <article class="page-article">
+          <nav class="breadcrumb">
+            <a class="breadcrumb__home" href="#"><i style="width:18px" class="fas fa-home"></i></a>
+
+            <span class="breadcrumb__arrow"><i class="fas fa-chevron-right"></i></span>
+            <a href="" class="breadcrumb__link">사용자관리</a>
+
+            <span class="breadcrumb__arrow"><i class="fas fa-chevron-right"></i></span>
+            <a href="" class="breadcrumb__link">관리자정보 관리</a>
+          </nav>
+
+          <h2 class="page-title">관리자정보 관리</h2>
+
+          <section class="page-section">
+            <h3 class="page-section__title">콩 내역</h3>
+
+            <div class="table">
+              <table>
+                <caption></caption>
+                <colgroup>
+                  <col style="width:60px;">
+                  <col>
+                  <col>
+                  <col style="width:100px;">
+                  <col style="width:100px;">
+                  <col style="width:100px;">
+                  <col style="width:100px;">
+                </colgroup>
+                <thead>
+                  <tr>
+                    <th scope="col">선택</th>
+                    <th scope="col">행번</th>
+                    <th scope="col">이름</th>
+                    <th scope="col">사용자관리</th>
+                    <th scope="col">관리자관리</th>
+                    <th scope="col">콩 관리</th>
+                    <th scope="col">삭제</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <span class="form-checkbox">
+                        <input id="" type="checkbox" name="">
+                      </span>
+                    </td>
+                    <td>1006852101001</td>
+                    <td>홍길동</td>
+                    <td>
+                      <div class="form-select">
+                        <select>
+                          <option value="Y">Y</option>
+                          <option value="N">N</option>
+                        </select>
+                      </div>
+                    </td>
+                    <td>
+                      <div class="form-select">
+                        <select>
+                          <option value="Y">Y</option>
+                          <option value="N">N</option>
+                        </select>
+                      </div>
+                    </td>
+                    <td>
+                      <div class="form-select">
+                        <select>
+                          <option value="Y">Y</option>
+                          <option value="N">N</option>
+                        </select>
+                      </div>
+                    </td>
+                    <td><button class="button-delete" type="button">삭제</button></td>
+                  </tr>
+
+                </tbody>
+              </table>
+            </div>
+
+
+            <div class="pagenation">
+              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-double-left"></i></a>
+              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-left"></i></a>
+  
+  
+              <a class="pagenation-item pagenation-item--is-active" href="#">1</a>
+              <a class="pagenation-item" href="#">2</a>
+              <a class="pagenation-item" href="#">3</a>
+              <a class="pagenation-item" href="#">4</a>
+              <a class="pagenation-item" href="#">5</a>
+              <a class="pagenation-item" href="#">6</a>
+              <a class="pagenation-item" href="#">7</a>
+              <a class="pagenation-item" href="#">8</a>
+              <a class="pagenation-item" href="#">9</a>
+              <a class="pagenation-item" href="#">10</a>
+  
+  
+              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-right"></i></a>
+              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-double-right"></i></a>
+            </div>
+
+
+          </section>
+
+
+
+        </article>
+
+
+      </div>
     </main>
 
 
