--- a/pages/02.kong/02.kongcount.html
+++ b/pages/02.kong/02.kongcount.html
@@ -250,7 +250,7 @@
                     </div>
                   </td>
                   <td>
-                    <button class="button" type="button">수정</button>
+                    <button class="button-icon button-icon--save type="button">수정</button>
                   </td>
                 </tr>
               </tbody>
