--- a/pages/02.kong/01.kongsetting.html
+++ b/pages/02.kong/01.kongsetting.html
@@ -244,7 +244,7 @@
                   </td>
                   <td></td>
                   <td>
-                    <button class="button-icon button-icon--save type="button">수정</button>
+                    <button class="button-icon button-icon--save" type="button">수정</button>
                   </td>
                 </tr>
                 <tr>
@@ -293,7 +293,7 @@
                   </td>
                   <td></td>
                   <td>
-                    <button class="button-icon button-icon--save type="button">수정</button>
+                    <button class="button-icon button-icon--save" type="button">수정</button>
                   </td>
                 </tr>
                 <tr>
@@ -342,7 +342,7 @@
                   </td>
                   <td></td>
                   <td>
-                    <button class="button-icon button-icon--save type="button">수정</button>
+                    <button class="button-icon button-icon--save" type="button">수정</button>
                   </td>
                 </tr>
                 <tr>
@@ -353,7 +353,7 @@
                   </td>
                   <td></td>
                   <td>
-                    <button class="button-icon button-icon--save type="button">수정</button>
+                    <button class="button-icon button-icon--save" type="button">수정</button>
                   </td>
                 </tr>
                 <tr>
@@ -365,7 +365,7 @@
                   </td>
                   <td></td>
                   <td>
-                    <button class="button-icon button-icon--save type="button">수정</button>
+                    <button class="button-icon button-icon--save" type="button">수정</button>
                   </td>
                 </tr>
                 <tr>
@@ -377,7 +377,7 @@
                   </td>
                   <td></td>
                   <td>
-                    <button class="button-icon button-icon--save type="button">수정</button>
+                    <button class="button-icon button-icon--save" type="button">수정</button>
                   </td>
                 </tr>
                 <tr>
@@ -389,7 +389,7 @@
                   </td>
                   <td></td>
                   <td>
-                    <button class="button-icon button-icon--save type="button">수정</button>
+                    <button class="button-icon button-icon--save" type="button">수정</button>
                   </td>
                 </tr>
                 <tr>
@@ -401,7 +401,7 @@
                   </td>
                   <td></td>
                   <td>
-                    <button class="button-icon button-icon--save type="button">수정</button>
+                    <button class="button-icon button-icon--save" type="button">수정</button>
                   </td>
                 </tr>
               </tbody>
@@ -438,7 +438,7 @@
                   </td>
                   <td></td>
                   <td>
-                    <button class="button-icon button-icon--save type="button">수정</button>
+                    <button class="button-icon button-icon--save" type="button">수정</button>
                   </td>
                 </tr>
                 <tr>
@@ -450,7 +450,7 @@
                   </td>
                   <td></td>
                   <td>
-                    <button class="button-icon button-icon--save type="button">수정</button>
+                    <button class="button-icon button-icon--save" type="button">수정</button>
                   </td>
                 </tr>
               </tbody>
