--- a/pages/04.notice/01.notice.html
+++ b/pages/04.notice/01.notice.html
@@ -219,7 +219,7 @@
               <div class="filter-cell__contents">
                 <div class="flex-container">
                   <span class="flex-container-fill" style="line-height: 30px;">은행장, 임원, 부장, 지점장, 과장, 심사역…</span>
-                  <button class="button" type="button" data-layer="#popupRole">변경</button>
+                  <button class="button-icon button-icon--search" type="button" data-layer="#popupRole"></button>
                 </div>
               </div>
             </div>
