--- a/pages/03.product/02.history.html
+++ b/pages/03.product/02.history.html
@@ -14,6 +14,11 @@
 
   <script src="/assets/libs/font-awesome@5.15.3/js/all.min.js"></script>
   <script src="/assets/libs/jquery/jquery-3.6.0.min.js"></script>
+  
+  <link href="/assets/plugins/flatpickr@4.6.9/css/flatpickr.min.css" type="text/css" rel="stylesheet" />
+  <link href="/assets/plugins/flatpickr@4.6.9/css/themes/material_red.css" type="text/css" rel="stylesheet" />
+  <script src="/assets/plugins/flatpickr@4.6.9/js/flatpickr.js"></script>
+  <script src="/assets/plugins/flatpickr@4.6.9/js/ko.js"></script>
 </head>
 
 <body>
@@ -174,6 +179,139 @@
 
         <section class="page-section">
           <h3 class="page-section__title">조회조건</h3>
+          <div class="filter-wrap">
+
+            <div class="filter-row">
+              <div class="filter-cell__title">
+                기간
+                <span class="form-checkbox"></span>(전체: <input id="checkboxNormal" type="checkbox">)</span>
+              </div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-datepicker">
+                    <input type="text" class="datepicker">
+                  </span>
+                  <span>&nbsp;~</span>
+                  <span class="form-datepicker">
+                    <input type="text" class="datepicker">
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">상품</div>
+              <div class="filter-cell__contents">
+                  <span class="form-select">
+                    <select>
+                      <option value="0000" selected>0000 - 전체</option>
+                      <option value="0001">0001 - 스타벅스 텀블러</option>
+                      <option value="0002">0002 - 무선충전 마우스패드</option>
+                    </select>
+                  </span>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">
+                직원
+                <span class="form-checkbox"></span>(전체: <input id="checkboxNormal" type="checkbox">)</span>
+              </div>
+              <div class="filter-cell__contents">
+                <div class="flex-container">
+                  <span class="flex-container-fill" style="line-height: 30px;">은행장, 임원, 부장, 지점장, 과장, 심사역…</span>
+                  <button class="button-icon button-icon--search" type="button" data-layer="#popupRole"></button>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="button-group">
+            <div class="button-group--position-right">
+              <button class="button button--flat-primary" type="button" data-layer="#popupProductAdd">조회</button>
+            </div>
+          </div>
+        </section>
+
+        <section class="page-section">
+          <h3 class="page-section__title">운영중인 상품목록</h3>
+          <div class="table">
+            <table>
+              <caption></caption>
+              <colgroup>
+                <col width="56px">
+                <col />
+                <col />
+                <col />
+                <col width="96px"/>
+                <col width="120px"/>
+                <col />
+                <col />
+                <col width="80px"/>
+                <col width="56px">
+              </colgroup>
+              <thead>
+                <tr>
+                  <th>선택</th>
+                  <th>상품전환 일련번호</th>
+                  <th>소속</th>
+                  <th>행번</th>
+                  <th>이름</th>
+                  <th>상품전환신청일</th>
+                  <th>삼품일련번호</th>
+                  <th>상품명</th>
+                  <th>황금콩 사용개수</th>
+                  <th>취소</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><input id="checkbox01" type="checkbox" name="checkboxname01"></td>
+                  <td>S100685_001</td>
+                  <td>디지털금융개발부</td>
+                  <td>100685</td>
+                  <td>김성휘</td>
+                  <td>2021-10-01</td>
+                  <td>0001</td>
+                  <td>스타벅스 텀블러</td>
+                  <td>3</td>
+                  <td>
+                    <button type="button" class="button-icon button-icon--delete" data-layer="#popupCancel"></button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="button-group">
+            <div class="button-group--position-left">
+              <button type="button" class="button button--flat-secondary">엑셀저장</button>
+            </div>
+          </div>
+            
+          <div id="pagenation" class="guide-box">
+            <div class="pagenation">
+              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-double-left"></i></a>
+              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-left"></i></a>
+  
+  
+              <a class="pagenation-item pagenation-item--is-active" href="#">1</a>
+              <a class="pagenation-item" href="#">2</a>
+              <a class="pagenation-item" href="#">3</a>
+              <a class="pagenation-item" href="#">4</a>
+              <a class="pagenation-item" href="#">5</a>
+              <a class="pagenation-item" href="#">6</a>
+              <a class="pagenation-item" href="#">7</a>
+              <a class="pagenation-item" href="#">8</a>
+              <a class="pagenation-item" href="#">9</a>
+              <a class="pagenation-item" href="#">10</a>
+  
+  
+              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-right"></i></a>
+              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-double-right"></i></a>
+            </div>
+          </div>
         </section>
       </div>
     </main>
@@ -182,6 +320,49 @@
   </div>
 
 
+
+  <!-- 상품전환 취소 -->
+  <div class="layer" id="popupCancel">
+    <div class="layer-dim"></div>
+    <article class="layer-article" style="width: 524px;">
+      <header class="layer-header">
+        <h1 class="layer-header__title">상품전환 취소</h1>
+      </header>
+      <div class="layer-body">
+        <div class="layer-contents">
+          <div class="filter-wrap">
+            <div class="filter-row">
+              <div class="filter-cell__title">상품전환 일련번호</div>
+              <div class="filter-cell__contents">S100685_001</div>
+            </div>
+            <div class="filter-row">
+              <div class="filter-cell__title">이름</div>
+              <div class="filter-cell__contents">김성휘</div>
+            </div>
+            <div class="filter-row">
+              <div class="filter-cell__title">행번</div>
+              <div class="filter-cell__contents">345522</div>
+            </div>
+            <div class="filter-row">
+              <div class="filter-cell__title">황금콩 개수</div>
+              <div class="filter-cell__contents">12</div>
+            </div>
+            <div class="filter-row">
+              <div class="filter-cell__title">상품전환일자</div>
+              <div class="filter-cell__contents">2021-10-10</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer class="layer-footer">
+        <div class="button-group">
+          <button type="button" class="button button--flat-warning" data-layerBtnClose>닫기</button>
+          <button type="button" class="button button--flat-primary">확인</button>
+        </div>
+      </footer>
+    </article>
+  </div>
+  <!-- // 상품전환 취소 -->
 
 
 
