--- a/pages/04.notice/02.popup.html
+++ b/pages/04.notice/02.popup.html
@@ -264,7 +264,9 @@
                 <tr>
                   <td><input id="checkbox01" type="checkbox" name="checkboxname01"></td>
                   <td>0001</td>
-                  <td>콩 시스템 정기점검 안내</td>
+                  <td>
+                    <button class="button button--type-link" data-layer="#popupEditPopup">콩 시스템 정기점검 안내</button>
+                  </td>
                   <td>2010-01-01</td>
                   <td>2010-01-01</td>
                   <td>관리자1</td>
@@ -285,7 +287,7 @@
             </div>
             <div class="button-group--position-right">
               <button class="button button--flat-danger" type="button">삭제</button>
-              <button class="button button--flat-primary" type="button" data-layer="#popupProductAdd">신규등록</button>
+              <button class="button button--flat-primary" type="button" data-layer="#popupAddPopup">신규등록</button>
             </div>
           </div>
             
@@ -320,6 +322,385 @@
 
 
 
+  <!-- 팝업 신규등록 -->
+  <div class="layer" id="popupAddPopup">
+    <div class="layer-dim"></div>
+    <article class="layer-article" style="width: 960px;">
+      <header class="layer-header">
+        <h1 class="layer-header__title">팝업 관리 - 신규등록</h1>
+      </header>
+      <div class="layer-body">
+        <div class="layer-contents">
+          <div class="filter-wrap">
+
+            <div class="filter-row">
+              <div class="filter-cell__title">제목</div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-input">
+                    <input type="text" readonly />
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">시작일시</div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-datepicker">
+                    <input type="text" class="datepicker">
+                  </span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">:</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">:</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">종료일시</div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-datepicker">
+                    <input type="text" class="datepicker">
+                  </span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">:</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">:</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">창닫기 버튼위치</div>
+              <div class="filter-cell__contents">
+                <span class="form-select">
+                  <select>
+                    <option value="1" selected>우측상단</option>
+                    <option value="2">우측하단</option>
+                    <option value="3">중앙하단</option>
+                    <option value="4">양쪽하단</option>
+                  </select>
+                </span>
+              </div>
+              <div class="filter-cell__title">팝업 스크롤바</div>
+              <div class="filter-cell__contents">
+                <span class="form-select">
+                  <select>
+                    <option value="1" selected>있음</option>
+                    <option value="0">없음</option>
+                  </select>
+                </span>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">창크기</div>
+              <div class="filter-cell__contents">
+                <span class="form-group">
+                  <span class="form-label">가로</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">(pixel) x 세로</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">(pixel)</span>
+                </span>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">창위치</div>
+              <div class="filter-cell__contents">
+                <span class="form-group">
+                  <span class="form-label">화면 상단에서 </span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">(pixel) 만큼, 왼쪽에서</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">(pixel)</span>
+                </span>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">실행모드</div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-radio">
+                    <input id="mode1" type="radio" name="dateRange">
+                    <label for="mode1">오늘 하루 보이지 않음</label>
+                  </span>
+                  <span class="form-radio">
+                    <input id="mode2" type="radio" name="dateRange">
+                    <label for="mode2">다시 열지 않음</label>
+                  </span>
+                  <span class="form-radio">
+                    <input id="mode3" type="radio" name="dateRange">
+                    <label for="mode3">일</label>
+                  </span>
+                  <span class="form-radio">
+                    <input id="mode4" type="radio" name="dateRange">
+                    <label for="mode4">주</label>
+                  </span>
+                  <span class="form-radio">
+                    <input id="mode5" type="radio" name="dateRange">
+                    <label for="mode5">월</label>
+                  </span>
+                  <span class="form-number--sm">
+                    <input type="number">
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">내용<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-textarea form-textarea--full">
+                  <textarea></textarea>
+                  <span class="form-textarea__count">300/1000</span>
+                </div>
+                <div class="button-group" style="margin-top: 4px;">
+                  <div class="button-group--position-right">
+                    <button class="button button--flat-secondary" type="button">미리보기</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <footer class="layer-footer">
+        <div class="button-group">
+          <button type="button" class="button button--flat-warning" data-layerBtnClose>닫기</button>
+          <button type="button" class="button button--flat-primary">등록하기</button>
+        </div>
+      </footer>
+    </article>
+  </div>
+  <!-- // 팝업 신규등록  -->
+
+  <!-- 팝업 수정하기 -->
+  <div class="layer" id="popupEditPopup">
+    <div class="layer-dim"></div>
+    <article class="layer-article" style="width: 960px;">
+      <header class="layer-header">
+        <h1 class="layer-header__title">팝업 관리 - 수정</h1>
+      </header>
+      <div class="layer-body">
+        <div class="layer-contents">
+          <div class="filter-wrap">
+
+            <div class="filter-row">
+              <div class="filter-cell__title">제목</div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-input">
+                    <input type="text" readonly />
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">시작일시</div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-datepicker">
+                    <input type="text" class="datepicker">
+                  </span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">:</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">:</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">종료일시</div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-datepicker">
+                    <input type="text" class="datepicker">
+                  </span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">:</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">:</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">창닫기 버튼위치</div>
+              <div class="filter-cell__contents">
+                <span class="form-select">
+                  <select>
+                    <option value="1" selected>우측상단</option>
+                    <option value="2">우측하단</option>
+                    <option value="3">중앙하단</option>
+                    <option value="4">양쪽하단</option>
+                  </select>
+                </span>
+              </div>
+              <div class="filter-cell__title">팝업 스크롤바</div>
+              <div class="filter-cell__contents">
+                <span class="form-select">
+                  <select>
+                    <option value="1" selected>있음</option>
+                    <option value="0">없음</option>
+                  </select>
+                </span>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">창크기</div>
+              <div class="filter-cell__contents">
+                <span class="form-group">
+                  <span class="form-label">가로</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">(pixel) x 세로</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">(pixel)</span>
+                </span>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">창위치</div>
+              <div class="filter-cell__contents">
+                <span class="form-group">
+                  <span class="form-label">화면 상단에서 </span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">(pixel) 만큼, 왼쪽에서</span>
+                  <span class="form-number--sm">
+                    <input type="number" />
+                  </span>
+                  <span class="form-label">(pixel)</span>
+                </span>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">실행모드</div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-radio">
+                    <input id="mode1" type="radio" name="dateRange">
+                    <label for="mode1">오늘 하루 보이지 않음</label>
+                  </span>
+                  <span class="form-radio">
+                    <input id="mode2" type="radio" name="dateRange">
+                    <label for="mode2">다시 열지 않음</label>
+                  </span>
+                  <span class="form-radio">
+                    <input id="mode3" type="radio" name="dateRange">
+                    <label for="mode3">일</label>
+                  </span>
+                  <span class="form-radio">
+                    <input id="mode4" type="radio" name="dateRange">
+                    <label for="mode4">주</label>
+                  </span>
+                  <span class="form-radio">
+                    <input id="mode5" type="radio" name="dateRange">
+                    <label for="mode5">월</label>
+                  </span>
+                  <span class="form-number--sm">
+                    <input type="number">
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">사용여부</div>
+              <div class="filter-cell__contents">
+                <div class="form-group">
+                  <span class="form-radio">
+                    <input id="mode1" type="radio" name="dateRange">
+                    <label for="mode1">Y</label>
+                  </span>
+                  <span class="form-radio">
+                    <input id="mode2" type="radio" name="dateRange">
+                    <label for="mode2">N</label>
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="filter-row">
+              <div class="filter-cell__title">내용<sup class="required">*</sup></div>
+              <div class="filter-cell__contents">
+                <div class="form-textarea form-textarea--full">
+                  <textarea></textarea>
+                  <span class="form-textarea__count">300/1000</span>
+                </div>
+                <div class="button-group" style="margin-top: 4px;">
+                  <div class="button-group--position-right">
+                    <button class="button button--flat-secondary" type="button">미리보기</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <footer class="layer-footer">
+        <div class="button-group">
+          <button type="button" class="button button--flat-warning" data-layerBtnClose>닫기</button>
+          <button type="button" class="button button--flat-primary">수정하기</button>
+        </div>
+      </footer>
+    </article>
+  </div>
+  <!-- // 팝업 수정하기  -->
 
 
 
