--- a/pages/04.notice/01.notice.html
+++ b/pages/04.notice/01.notice.html
@@ -263,7 +263,9 @@
               <tbody>
                 <tr>
                   <td>0001</td>
-                  <td><a href="#" data-layer="#popupModifyNotice">콩 시스템 오픈 안내</a></td>
+                  <td>
+                    <button class="button button--type-link"  data-layer="#popupModifyNotice">콩 시스템 오픈 안내</button>
+                  </td>
                   <td>노출</td>
                   <td>2021-10-01</td>
                   <td>관리자</td>
