--- a/pages/04.notice/01.notice.html
+++ b/pages/04.notice/01.notice.html
@@ -279,10 +279,10 @@
 
           <div class="button-group">
             <div class="button-group--position-left">
-              <button type="button" class="button button--flat-secondary">엑셀저장</button>
+              <button type="button" class="button button--outline-secondary">엑셀저장</button>
             </div>
             <div class="button-group--position-right">
-              <button class="button button--flat-primary" type="button" data-layer="#popupAddNotice">신규등록</button>
+              <button class="button button--outline-primary" type="button" data-layer="#popupAddNotice">신규등록</button>
             </div>
           </div>
 
