--- a/pages/01.manage/01.user.html
+++ b/pages/01.manage/01.user.html
@@ -448,8 +448,8 @@
               </table>
             </div>
             <div class="button-group">
-              <div class="button-group--position-right">
-                <button type="button" class="button button--outline-secondary">액셀저장</button>
+              <div class="button-group--position-left">
+                <button type="button" class="button button--outline-secondary">엑셀저장</button>
               </div>
             </div>
 
