--- a/pages/03.product/01.add.html
+++ b/pages/03.product/01.add.html
@@ -253,7 +253,7 @@
 
           <div class="button-group">
             <div class="button-group--position-left">
-              <button type="button" class="button button--flat-secondary">엑셀저장</button>
+              <button type="button" class="button button--outline-secondary">엑셀저장</button>
             </div>
             <div class="button-group--position-right">
               <button class="button button--flat-primary" type="button" data-layer="#popupProductModify">수정하기</button>
