--- a/pages/03.product/02.history.html
+++ b/pages/03.product/02.history.html
@@ -286,7 +286,7 @@
 
           <div class="button-group">
             <div class="button-group--position-left">
-              <button type="button" class="button button--flat-secondary">엑셀저장</button>
+              <button type="button" class="button button--outline-secondary">엑셀저장</button>
             </div>
           </div>
             
